# AdventOfCode

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
2020/aoc-haskell/: aoc.cabal
2020/aoc-haskell/harness/AOC/: Solution.hs
2020/aoc-haskell/solutions/: Day00.hs  Day01.hs  Day02.hs  Day07.hs
2020/aoc-haskell/src/: Main.hs
2020/aoc-haskell/util/: Grid2D.hs  ParsingPrelude.hs  Util.hs
2021/aoc-haskell/: aoc.cabal  cabal.project
2021/aoc-haskell/harness/AOC/: Harness.hs
2021/aoc-haskell/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs
2021/aoc-haskell/src/: Main.hs
2021/aoc-haskell/util/: Util.hs
2022/aoc-haskell/: README.md  aoc.cabal
2022/aoc-haskell/harness/AOC/: Harness.hs  Solution.hs
2022/aoc-haskell/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs
2022/aoc-haskell/src/: Main.hs
2022/aoc-haskell/util/: ParsingPrelude.hs  Util.hs
2022/aoc_rust/: Cargo.toml
2022/aoc_rust/src/: lib.rs  main.rs
2022/aoc_rust/src/solutions/: day01.rs
