cabal-version:       2.4
name:                aoc
version:             0.1.1.0
synopsis:            My Advent of Code 2022 solutions.
description:         My Advent of Code 2022 solutions.
homepage:            https://github.com/willowell/aoc/README.md
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Solonarv (https://github.com/Solonarv)
maintainer:          wlm.howell@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:
    GHC == 9.2.5
  , GHC == 9.4.2

common deps
  build-depends:
      -- GHC 9.2.x, 9.4.x
      base >=4.16 && <5
    , aeson
    , containers
    , vector
    , bytestring
    , text
    , unordered-containers
    , megaparsec
    , parser-combinators
    , linear
    , split
    , conduit
    , mtl
    , monad-loops
    , lens
    , finite-typelits
    , comonad
    , monad-loops
    , regex-applicative
    , vector-algorithms

common lang
  default-language: Haskell2010
  -- -XKitchenSink
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DerivingVia
    DerivingStrategies
    TypeFamilies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    PolyKinds
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns
  ghc-options:
    -Wall
    -Wno-unused-do-bind
    -O2

executable solve
  import: deps, lang
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:
      aoc
    , solutions
    , util
  ghc-options:
    -threaded
    -rtsopts
    -funbox-small-strict-fields

library
  import: deps, lang
  hs-source-dirs: harness
  exposed-modules:
      AOC.Solution
    , AOC.Harness
  build-depends:
      util
    , optparse-applicative
    , ansi-terminal
    , directory
    , yaml
    , req
    , http-client
    , time
    , data-default
  ghc-options:
    -Wno-orphans

library util
  import: deps, lang
  hs-source-dirs: util
  exposed-modules:
      DynMap
    , Grid2D
    , PagedVector
    , ParsingPrelude
    , RatAngle
    , Util
  build-depends:
    primitive

library solutions
  import: deps, lang
  exposed-modules:
      Day01, Day02, Day03, Day04
    , Day05, Day06, Day07, Day08
    , Day09, Day10
  hs-source-dirs: solutions
  build-depends: aoc, util
