cabal-version:       2.4
name:                aoc
version:             0.1.1.0
synopsis:            My Advent of Code 2022 solutions.
description:         My Advent of Code 2022 solutions.
homepage:            https://github.com/willowell/aoc/README.md
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Solonarv (https://github.com/Solonarv)
maintainer:          wlm.howell@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:
    GHC == 9.2.5
  , GHC == 9.4.2

common deps
  build-depends:
      -- GHC 9.2.x, 9.4.x
      base >=4.16 && <5

    -- JSON decoding and encoding
    -- https://hackage.haskell.org/package/aeson
    , aeson

    -- Byte strings
    -- https://hackage.haskell.org/package/bytestring
    , bytestring

    -- Comonads
    -- https://hackage.haskell.org/package/comonad
    , comonad

    -- Streaming data processing library
    -- https://hackage.haskell.org/package/conduit
    , conduit

    -- Assorted concrete container types
    -- e.g., `Graph`, `Map`, `Sequence`, `Set`, and `Tree`
    -- https://hackage.haskell.org/package/containers
    , containers

    -- Finite number type, e.g., `type Day = Finite 25`
    -- https://hackage.haskell.org/package/finite-typelits
    , finite-typelits

    -- https://hackage.haskell.org/package/hashable
    , hashable

    -- https://hackage.haskell.org/package/KMP
    , KMP

    -- Lenses, Folds, and Traversals
    -- Most notably, allows for an imperative-ish interface for deeply nested structures
    -- https://hackage.haskell.org/package/lens
    , lens

    -- Linear Algebra
    -- Vectors, Matrices, etc.
    -- https://hackage.haskell.org/package/linear
    , linear

    -- Industrial-strength monadic parser combinators
    -- Combined with `parser-combinators`, provides an
    -- easy and delightful interface for parsing characters.
    -- https://hackage.haskell.org/package/megaparsec
    , megaparsec

    -- Monad Loops
    -- https://hackage.haskell.org/package/monad-loops
    , monad-loops

    -- Monad Transformer Library
    -- https://hackage.haskell.org/package/mtl
    , mtl

    -- Parser Combinators
    -- https://hackage.haskell.org/package/parser-combinators
    , parser-combinators

    -- Applicative interface for building Regex
    -- https://hackage.haskell.org/package/regex-applicative
    , regex-applicative

    -- Combinators for splitting lists.
    -- There is some overlap with `parser-combinators`.
    -- https://hackage.haskell.org/package/split
    , split

    -- Efficient packed Unicode text type.
    -- Typically better-suited for text than Haskell's `String` type.
    -- https://hackage.haskell.org/package/text
    , text

    -- Hash-based container types
    -- e.g., `HashMap` and `HashSet`.
    -- https://hackage.haskell.org/package/unordered-containers
    , unordered-containers

    -- Efficient arrays
    -- https://hackage.haskell.org/package/vector
    , vector

    -- Efficient algorithms for efficient arrays!
    -- https://hackage.haskell.org/package/vector-algorithms
    , vector-algorithms

common lang
  default-language: Haskell2010
  -- -XKitchenSink
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DerivingVia
    DerivingStrategies
    TypeFamilies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    PolyKinds
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns
  ghc-options:
    -Wall
    -Wno-unused-do-bind
    -O2

executable solve
  import: deps, lang
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:
      aoc
    , solutions
    , util
  ghc-options:
    -threaded
    -rtsopts
    -funbox-small-strict-fields

library
  import: deps, lang
  hs-source-dirs: harness
  exposed-modules:
      AOC.Solution
    , AOC.Harness
  build-depends:
      util
    -- Terminal colors!
    -- https://hackage.haskell.org/package/ansi-terminal
    , ansi-terminal

    -- `Default` typeclass
    -- https://hackage.haskell.org/package/data-default
    , data-default

    -- Platform-agnostic filesystem operations
    -- https://hackage.haskell.org/package/directory
    , directory

    -- Low-level HTTP Client
    -- https://hackage.haskell.org/package/http-client
    , http-client

    -- Applicative command line options parser
    -- https://hackage.haskell.org/package/optparse-applicative
    , optparse-applicative

    -- High-level HTTP Client Library
    -- https://hackage.haskell.org/package/req
    , req

    -- Time library
    -- https://hackage.haskell.org/package/time
    , time

    -- YAML parser and writer.
    -- Can bridge to Aeson.
    -- https://hackage.haskell.org/package/yaml
    , yaml
    
  ghc-options:
    -Wno-orphans

library util
  import: deps, lang
  hs-source-dirs: util
  exposed-modules:
      DynMap
    , Grid2D
    , PagedVector
    , ParsingPrelude
    , RatAngle
    , Util
  build-depends:
    -- Primitive memory-related operations
    -- https://hackage.haskell.org/package/primitive
    primitive

library solutions
  import: deps, lang
  exposed-modules:
      Day00
    , Day01
    , Day02
    , Day03
    , Day04
    , Day05
    , Day06
    , Day07
  hs-source-dirs: solutions
  build-depends: aoc, util
